Ajustes Layout do Detalhe

--- a/DeLivre/DeLivre/Views/Detalhe/AcaiNormal.xaml
+++ b/DeLivre/DeLivre/Views/Detalhe/AcaiNormal.xaml
@@ -7,21 +7,31 @@
              x:Class="DeLivre.Views.Detalhe.AcaiNormal">
 
     <pages:PopupPage.Animation>
-        <animations:ScaleAnimation
-              PositionIn="Bottom"
-              PositionOut="Center"
-              ScaleIn="1"
-              ScaleOut="0.7"
-              DurationIn="500"
-              EasingIn="SpringIn"/>
+        <animations:MoveAnimation
+            PositionIn="Bottom"
+            PositionOut="Bottom"
+            DurationIn="400"
+            DurationOut="300"
+            HasBackgroundAnimation="True"/>
     </pages:PopupPage.Animation>
 
-    <StackLayout WidthRequest="320" HeightRequest="450" BackgroundColor="White" Padding="5,5" IsClippedToBounds="True" HorizontalOptions="Center" VerticalOptions="Center">
-        <Label Text="Detalhe do Pedido!" FontSize="20" HorizontalTextAlignment="Center" TextColor="{StaticResource asphaltPrimary}"></Label>
-        <BoxView Margin="3" HeightRequest="1" WidthRequest="50" Color="#EF5350" />
+    <StackLayout WidthRequest="360" HeightRequest="450" BackgroundColor="Transparent" Padding="5,5" IsClippedToBounds="True" HorizontalOptions="Center" VerticalOptions="Center">
+        <Frame x:Name="PopUpDialogLayout"
+            HorizontalOptions="Center" 
+            VerticalOptions="CenterAndExpand" 
+            OutlineColor="#EF5350"
+            CornerRadius="5"
+            HasShadow="true"
+            WidthRequest="350"
+            Margin="16"
+            Padding="5">
+            <StackLayout>
 
-        <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Margin="0,5">
-            <Label x:Name="Qt_Pedido" 
+                <Label Text="Detalhe do Pedido!" FontSize="20" HorizontalTextAlignment="Center" TextColor="{StaticResource asphaltPrimary}"></Label>
+                <BoxView Margin="3" HeightRequest="1" WidthRequest="50" Color="#EF5350" />
+
+                <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Margin="0,5">
+                    <Label x:Name="Qt_Pedido" 
                            Text="{Binding Value, Mode=TwoWay, StringFormat=' {0}'}"                                                     
                            FontSize="13"
                            FontAttributes="Bold"
@@ -29,101 +39,104 @@
                            HorizontalTextAlignment="Center"
                            TextColor="{StaticResource asphaltPrimary}" />
 
-            <Label x:Name="lbl_Tipo_lanche" FontSize="13" 
+                    <Label x:Name="lbl_Tipo_lanche" FontSize="13" 
                            FontAttributes="Bold" HorizontalTextAlignment="Center" 
                            TextColor="{StaticResource asphaltPrimary}"/>
 
-            <Label x:Name="lbl_Nome_lanche" FontSize="13" 
+                    <Label x:Name="lbl_Nome_lanche" FontSize="13" 
                            HorizontalTextAlignment="Center" LineBreakMode="TailTruncation"
                            TextColor="{StaticResource asphaltPrimary}"/>
 
-        </StackLayout>
+                </StackLayout>
 
-        <Label x:Name="lbl_Descricao" FontSize="15" Margin="0,-5"
+                <Label x:Name="lbl_Descricao" FontSize="15" Margin="0,-5"
                        HorizontalTextAlignment="Center"                    
                        TextColor="{StaticResource asphaltPrimary}"/>
 
-        <BoxView Margin="3" HeightRequest="1" WidthRequest="50" Color="#EF5350" />
-        <ScrollView>
-            <StackLayout>
+                <BoxView Margin="3" HeightRequest="1" WidthRequest="50" Color="#EF5350" />
+                <ScrollView>
+                    <StackLayout>
 
-                <Label x:Name="lbl_Tam" FontSize="15" FontAttributes="Bold" 
+                        <Label x:Name="lbl_Tam" FontSize="15" FontAttributes="Bold" 
                            HorizontalTextAlignment="Center" Text="Escolha o Tamanho:"                   
                            TextColor="{StaticResource asphaltPrimary}"/>
 
-                <StackLayout x:Name="StackRadio" Orientation="Horizontal" HorizontalOptions="CenterAndExpand" Margin="50,0" Spacing="13">
-                    <input:RadioButtonGroupView x:Name="RadioBtn">
-                        <input:RadioButton x:Name="Tipo_P" TextFontSize="12" Color="#EF5350" CircleColor="#EF5350" IsChecked="True" />
-                        <input:RadioButton x:Name="Tipo_I" TextFontSize="12" Color="#EF5350" CircleColor="#EF5350" />
-                        <input:RadioButton x:Name="Tipo_M" TextFontSize="12" Color="#EF5350" CircleColor="#EF5350"  />
-                        <input:RadioButton x:Name="Tipo_G" TextFontSize="12" Color="#EF5350" CircleColor="#EF5350" />
-                    </input:RadioButtonGroupView>
-                </StackLayout>
-                <Label x:Name="lbl_Adicionais" FontSize="15" FontAttributes="Bold" 
+                        <StackLayout x:Name="StackRadio" Orientation="Horizontal" HorizontalOptions="CenterAndExpand" Margin="50,0" Spacing="13">
+                            <input:RadioButtonGroupView x:Name="RadioBtn">
+                                <input:RadioButton x:Name="Tipo_P" TextFontSize="12" Color="#EF5350" CircleColor="#EF5350" IsChecked="True" />
+                                <input:RadioButton x:Name="Tipo_I" TextFontSize="12" Color="#EF5350" CircleColor="#EF5350" />
+                                <input:RadioButton x:Name="Tipo_M" TextFontSize="12" Color="#EF5350" CircleColor="#EF5350"  />
+                                <input:RadioButton x:Name="Tipo_G" TextFontSize="12" Color="#EF5350" CircleColor="#EF5350" />
+                            </input:RadioButtonGroupView>
+                        </StackLayout>
+                        <Label x:Name="lbl_Adicionais" FontSize="15" FontAttributes="Bold" 
                        HorizontalTextAlignment="Center" Text="Adicionais:"                   
                        TextColor="{StaticResource asphaltPrimary}"/>
 
-                <StackLayout Orientation="Horizontal">
-                    <StackLayout Spacing="2" Orientation="Vertical" Margin="5,0,5,0">
-                        <input:CheckBox x:Name="Adicional_00" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
-                        <input:CheckBox x:Name="Adicional_02" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
-                        <input:CheckBox x:Name="Adicional_04" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
-                        <input:CheckBox x:Name="Adicional_06" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
-                        <input:CheckBox x:Name="Adicional_08" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
-                        <input:CheckBox x:Name="Adicional_10" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
-                        <input:CheckBox x:Name="Adicional_12" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
-                        <input:CheckBox x:Name="Adicional_14" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
-                        <input:CheckBox x:Name="Adicional_16" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
-                        <input:CheckBox x:Name="Adicional_18" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
-                        <input:CheckBox x:Name="Adicional_20" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
-                        <input:CheckBox x:Name="Adicional_22" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
-                        <input:CheckBox x:Name="Adicional_24" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
-                    </StackLayout>
+                        <StackLayout Orientation="Horizontal">
+                            <StackLayout Spacing="2" Orientation="Vertical" Margin="5,0,5,0">
+                                <input:CheckBox x:Name="Adicional_00" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_02" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_04" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_06" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_08" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_10" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_12" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_14" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_16" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_18" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_20" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_22" TextFontSize="11" Margin="0,0,5,0" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_24" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
+                            </StackLayout>
 
-                    <StackLayout Spacing="2" Orientation="Vertical" Margin="5,0,5,0">
-                        <input:CheckBox x:Name="Adicional_01" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
-                        <input:CheckBox x:Name="Adicional_03" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
-                        <input:CheckBox x:Name="Adicional_05" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
-                        <input:CheckBox x:Name="Adicional_07" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
-                        <input:CheckBox x:Name="Adicional_09" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
-                        <input:CheckBox x:Name="Adicional_11" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
-                        <input:CheckBox x:Name="Adicional_13" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
-                        <input:CheckBox x:Name="Adicional_15" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
-                        <input:CheckBox x:Name="Adicional_17" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
-                        <input:CheckBox x:Name="Adicional_19" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
-                        <input:CheckBox x:Name="Adicional_21" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
-                        <input:CheckBox x:Name="Adicional_23" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
-                       
-                    </StackLayout>
-                </StackLayout>
+                            <StackLayout Spacing="2" Orientation="Vertical" Margin="5,0,5,0">
+                                <input:CheckBox x:Name="Adicional_01" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_03" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_05" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_07" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_09" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_11" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_13" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_15" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_17" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_19" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_21" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
+                                <input:CheckBox x:Name="Adicional_23" TextFontSize="11" HorizontalOptions="StartAndExpand" Type="Material" />
 
-                <StackLayout Orientation="Vertical">
-                    <Label Text="Quantidade:" FontAttributes="Bold"
+                            </StackLayout>
+                        </StackLayout>
+
+                        <StackLayout Orientation="Vertical">
+                            <Label Text="Quantidade:" FontAttributes="Bold"
                            FontSize="15" Margin="0,15"      
                            HorizontalTextAlignment="Center"
                            TextColor="{StaticResource asphaltPrimary}" />
 
-                    <Stepper x:Name="stepper" Minimum="1" Maximum="25" 
+                            <Stepper x:Name="stepper" Minimum="1" Maximum="25" 
                              HeightRequest="40" WidthRequest="10" BackgroundColor="#EF5350" 
                              Value="{Binding Quantidade}" Visual="Material"
                              ValueChanged="Stepper_ValueChanged"
                              Increment="1" Margin="20,0,20,0" />
 
-                    <Label x:Name="lbl_InfoComplementar" FontSize="15" Margin="0,5,0,0" FontAttributes="Bold" 
+                            <Label x:Name="lbl_InfoComplementar" FontSize="15" Margin="0,5,0,0" FontAttributes="Bold" 
                            HorizontalTextAlignment="Center" Text="Observação:"                              
                            TextColor="{StaticResource asphaltPrimary}"/>
 
-                    <Entry x:Name="Lbl_Troca" Placeholder="Ex.: Tirar a granola, sabor da calda etc" 
+                            <Entry x:Name="Lbl_Troca" Placeholder="Ex.: Tirar a granola, sabor da calda etc" 
                            Margin="0,10" HeightRequest="60"
                            HorizontalTextAlignment="Center" FontSize="13"
                            WidthRequest="200"/>
 
-                </StackLayout>
+                        </StackLayout>
+                    </StackLayout>
+                </ScrollView>
+                <Button x:Name="btn_selecionar" Margin="0,5,0,5" Text="Adicionar ao Pedido!" 
+                        BackgroundColor="#EF5350" Visual="Material" TextColor="White" 
+                        Clicked="Btn_selecionar_Clicked"/>
+
             </StackLayout>
-        </ScrollView>
-        <Button x:Name="btn_selecionar" Margin="0,5,0,5" Text="Adicionar ao Pedido!" 
-                BackgroundColor="#EF5350" Visual="Material" TextColor="White" 
-                Clicked="Btn_selecionar_Clicked"/>
+        </Frame>
     </StackLayout>
 
 </pages:PopupPage>
