--- a/DeLivre/DeLivre/Views/Detalhe/Doces.xaml
+++ b/DeLivre/DeLivre/Views/Detalhe/Doces.xaml
@@ -7,16 +7,20 @@
              x:Class="DeLivre.Views.Detalhe.Doces">
 
     <pages:PopupPage.Animation>
-        <animations:ScaleAnimation
-              PositionIn="Bottom"
-              PositionOut="Center"
-              ScaleIn="1"
-              ScaleOut="0.7"
-              DurationIn="500"
-              EasingIn="SpringIn"/>
+        <animations:MoveAnimation
+            PositionIn="Bottom"
+            PositionOut="Bottom"
+            DurationIn="400"
+            DurationOut="300"
+            HasBackgroundAnimation="True"/>
     </pages:PopupPage.Animation>
 
-    <StackLayout WidthRequest="320" HeightRequest="400" BackgroundColor="White" Padding="5,5" IsClippedToBounds="True" HorizontalOptions="Center" VerticalOptions="Center">
+    <StackLayout WidthRequest="360" HeightRequest="400" BackgroundColor="Transparent" Padding="5,5" IsClippedToBounds="True" HorizontalOptions="Center" VerticalOptions="Center">
+        <Frame x:Name="PopUpDialogLayout" Padding="5"
+                HorizontalOptions="Center" VerticalOptions="CenterAndExpand"                                              
+                HasShadow="true" WidthRequest="350"                
+                Margin="16" CornerRadius="5" OutlineColor="#EF5350">
+            <StackLayout>
         <Label Text="Detalhe do Pedido!" FontSize="20" HorizontalTextAlignment="Center" TextColor="{StaticResource asphaltPrimary}"></Label>
         <BoxView Margin="3" HeightRequest="1" WidthRequest="50" Color="#EF5350" />
        
@@ -86,9 +90,10 @@
             </StackLayout>
          </ScrollView>
 
-        <Button x:Name="btn_selecionar" Margin="0,5" Text="Adicionar ao Pedido!" 
-                BackgroundColor="#EF5350" Visual="Material" TextColor="White" 
-                Clicked="Btn_selecionar_Clicked" ></Button>
-    </StackLayout>
-
+                <Button x:Name="btn_selecionar" Margin="0,5" Text="Adicionar ao Pedido!" 
+                        BackgroundColor="#EF5350" Visual="Material" TextColor="White" 
+                        Clicked="Btn_selecionar_Clicked" />
+            </StackLayout>
+        </Frame>
+    </StackLayout>  
 </pages:PopupPage>
