--- a/DeLivre/DeLivre/Views/Detalhe/Refrigerante.xaml
+++ b/DeLivre/DeLivre/Views/Detalhe/Refrigerante.xaml
@@ -7,31 +7,35 @@
              x:Class="DeLivre.Views.Detalhe.Refrigerante">
 
     <pages:PopupPage.Animation>
-        <animations:ScaleAnimation
-              PositionIn="Bottom"
-              PositionOut="Center"
-              ScaleIn="1"
-              ScaleOut="0.7"
-              DurationIn="500"
-              EasingIn="SpringIn"/>
+        <animations:MoveAnimation
+            PositionIn="Bottom"
+            PositionOut="Bottom"
+            DurationIn="400"
+            DurationOut="300"
+            HasBackgroundAnimation="True"/>
     </pages:PopupPage.Animation>
 
-    <StackLayout WidthRequest="320" HeightRequest="400" BackgroundColor="White" Padding="5,5" IsClippedToBounds="True" HorizontalOptions="Center" VerticalOptions="Center">
+    <StackLayout WidthRequest="360" HeightRequest="400" BackgroundColor="Transparent" Padding="5,5" IsClippedToBounds="True" HorizontalOptions="Center" VerticalOptions="Center">
+        <Frame x:Name="PopUpDialogLayout" Padding="5"
+                HorizontalOptions="Center" VerticalOptions="CenterAndExpand"                                              
+                HasShadow="true" WidthRequest="350"                
+                Margin="16" CornerRadius="5" OutlineColor="#EF5350">
+            <StackLayout>
         <Label Text="Detalhe do Pedido!" FontSize="20" HorizontalTextAlignment="Center" TextColor="{StaticResource asphaltPrimary}"></Label>
         <BoxView Margin="3" HeightRequest="1" WidthRequest="50" Color="#EF5350" />
 
-        <ScrollView>
-            <StackLayout HeightRequest="400">
+        <ScrollView HeightRequest="370">
+            <StackLayout HeightRequest="370">
                 <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Margin="0,5">
                     <Label x:Name="Qt_Pedido" 
-                       Text="{Binding Value, Mode=TwoWay, StringFormat=' {0}'}"                                                     
-                       FontSize="13"
-                       FontAttributes="Bold"
-                       BindingContext="{x:Reference stepper}"
-                       HorizontalTextAlignment="Center"
-                       TextColor="{StaticResource asphaltPrimary}" />
+                           Text="{Binding Value, Mode=TwoWay, StringFormat=' {0}'}"                                                     
+                           FontSize="13"
+                           FontAttributes="Bold"
+                           BindingContext="{x:Reference stepper}"
+                           HorizontalTextAlignment="Center"
+                           TextColor="{StaticResource asphaltPrimary}" />
 
-                    <Label x:Name="lbl_Tipo_lanche" FontSize="13" 
+                            <Label x:Name="lbl_Tipo_lanche" FontSize="13" 
                        FontAttributes="Bold" HorizontalTextAlignment="Center" 
                        TextColor="{StaticResource asphaltPrimary}"/>
 
@@ -89,6 +93,8 @@
                 BackgroundColor="#EF5350" Visual="Material" TextColor="White" 
                 Clicked="Btn_selecionar_Clicked"/>
 
+            </StackLayout>
+        </Frame>
     </StackLayout>
 
 </pages:PopupPage>
