--- a/DeLivre/DeLivre/Views/Detalhe/Pizza.xaml
+++ b/DeLivre/DeLivre/Views/Detalhe/Pizza.xaml
@@ -7,23 +7,27 @@
              x:Class="DeLivre.Views.Detalhe.Pizza">
 
     <pages:PopupPage.Animation>
-        <animations:ScaleAnimation
-              PositionIn="Bottom"
-              PositionOut="Center"
-              ScaleIn="1"
-              ScaleOut="0.7"
-              DurationIn="500"
-              EasingIn="SpringIn"/>
+        <animations:MoveAnimation
+            PositionIn="Bottom"
+            PositionOut="Bottom"
+            DurationIn="400"
+            DurationOut="300"
+            HasBackgroundAnimation="True"/>
     </pages:PopupPage.Animation>
 
-    <StackLayout WidthRequest="320" HeightRequest="400" BackgroundColor="White" Padding="5,5" IsClippedToBounds="True" HorizontalOptions="Center" VerticalOptions="Center">
-        <Label Text="Detalhe do Pedido!" FontSize="20" HorizontalTextAlignment="Center" TextColor="{StaticResource asphaltPrimary}"></Label>
-        <BoxView Margin="3" HeightRequest="1" WidthRequest="50" Color="#EF5350" />
-       
-        <ScrollView>
-            <StackLayout HeightRequest="400">
-                <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Margin="0,5">
-                    <Label x:Name="Qt_Pedido" 
+    <StackLayout WidthRequest="360" HeightRequest="400" BackgroundColor="Transparent" Padding="5,5" IsClippedToBounds="True" HorizontalOptions="Center" VerticalOptions="Center">
+        <Frame x:Name="PopUpDialogLayout" Padding="5"
+                HorizontalOptions="Center" VerticalOptions="CenterAndExpand"                                              
+                HasShadow="true" WidthRequest="350"                
+                Margin="16" CornerRadius="5" OutlineColor="#EF5350">
+            <StackLayout>
+                <Label Text="Detalhe do Pedido!" FontSize="20" HorizontalTextAlignment="Center" TextColor="{StaticResource asphaltPrimary}"></Label>
+                <BoxView Margin="3" HeightRequest="1" WidthRequest="50" Color="#EF5350" />
+
+                <ScrollView>
+                    <StackLayout HeightRequest="400">
+                        <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Margin="0,5">
+                            <Label x:Name="Qt_Pedido" 
                            Text="{Binding Value, Mode=TwoWay, StringFormat=' {0}'}"                                                     
                            FontSize="13"
                            FontAttributes="Bold"
@@ -31,64 +35,66 @@
                            HorizontalTextAlignment="Center"
                            TextColor="{StaticResource asphaltPrimary}" />
 
-                    <Label x:Name="lbl_Tipo_lanche" FontSize="13" 
+                            <Label x:Name="lbl_Tipo_lanche" FontSize="13" 
                            FontAttributes="Bold" HorizontalTextAlignment="Center" 
                            TextColor="{StaticResource asphaltPrimary}"/>
 
-                    <Label x:Name="lbl_Nome_lanche" FontSize="13" 
+                            <Label x:Name="lbl_Nome_lanche" FontSize="13" 
                            HorizontalTextAlignment="Center" LineBreakMode="TailTruncation"
                            TextColor="{StaticResource asphaltPrimary}"/>
 
-                </StackLayout>
+                        </StackLayout>
 
-                <Label x:Name="lbl_Descricao" FontSize="15" Margin="0,-5"
+                        <Label x:Name="lbl_Descricao" FontSize="15" Margin="0,-5"
                        HorizontalTextAlignment="Center"                    
                        TextColor="{StaticResource asphaltPrimary}"/>
 
-                <BoxView Margin="3" HeightRequest="1" WidthRequest="50" Color="#EF5350" />
+                        <BoxView Margin="3" HeightRequest="1" WidthRequest="50" Color="#EF5350" />
 
-                <StackLayout Orientation="Vertical" HorizontalOptions="Center" Margin="0,5">
-                    <Label x:Name="lbl_Tamaho" FontSize="15" FontAttributes="Bold" 
+                        <StackLayout Orientation="Vertical" HorizontalOptions="Center" Margin="0,5">
+                            <Label x:Name="lbl_Tamaho" FontSize="15" FontAttributes="Bold" 
                            HorizontalTextAlignment="Center" Text="Escolha o Tamanho:"                   
                            TextColor="{StaticResource asphaltPrimary}"/>
 
-                    <StackLayout x:Name="StackRadio" Orientation="Horizontal" HorizontalOptions="CenterAndExpand" Margin="50,0" Spacing="13">
-                        <input:RadioButtonGroupView x:Name="RadioBtn">
-                            <input:RadioButton x:Name="Tipo_P" TextFontSize="12" Color="#EF5350" CircleColor="#EF5350" IsChecked="True" />
-                            <input:RadioButton x:Name="Tipo_I" TextFontSize="12" Color="#EF5350" CircleColor="#EF5350" />
-                            <input:RadioButton x:Name="Tipo_M" TextFontSize="12" Color="#EF5350" CircleColor="#EF5350"  />
-                            <input:RadioButton x:Name="Tipo_G" TextFontSize="12" Color="#EF5350" CircleColor="#EF5350" />
-                        </input:RadioButtonGroupView>
-                    </StackLayout>
-                </StackLayout>
+                            <StackLayout x:Name="StackRadio" Orientation="Horizontal" HorizontalOptions="CenterAndExpand" Margin="50,0" Spacing="13">
+                                <input:RadioButtonGroupView x:Name="RadioBtn">
+                                    <input:RadioButton x:Name="Tipo_P" TextFontSize="12" Color="#EF5350" CircleColor="#EF5350" IsChecked="True" />
+                                    <input:RadioButton x:Name="Tipo_I" TextFontSize="12" Color="#EF5350" CircleColor="#EF5350" />
+                                    <input:RadioButton x:Name="Tipo_M" TextFontSize="12" Color="#EF5350" CircleColor="#EF5350"  />
+                                    <input:RadioButton x:Name="Tipo_G" TextFontSize="12" Color="#EF5350" CircleColor="#EF5350" />
+                                </input:RadioButtonGroupView>
+                            </StackLayout>
+                        </StackLayout>
 
-                <StackLayout Orientation="Vertical" Margin="0,-20" WidthRequest="20">
-                    <Label Text="Quantidade:" FontAttributes="Bold"
+                        <StackLayout Orientation="Vertical" Margin="0,-20" WidthRequest="20">
+                            <Label Text="Quantidade:" FontAttributes="Bold"
                            FontSize="15" Margin="0,15"      
                            HorizontalTextAlignment="Center"
                            TextColor="{StaticResource asphaltPrimary}" />
 
-                    <Stepper x:Name="stepper" Minimum="1" Maximum="25" 
+                            <Stepper x:Name="stepper" Minimum="1" Maximum="25" 
                              HeightRequest="40" WidthRequest="10" BackgroundColor="#EF5350" 
                              Value="{Binding Quantidade}" Visual="Material"
                              ValueChanged="Stepper_ValueChanged"
                              Increment="1" Margin="20,0,20,0" />
 
-                    <Label x:Name="lbl_InfoComplementar" FontSize="15" Margin="0,5,0,0" FontAttributes="Bold" 
+                            <Label x:Name="lbl_InfoComplementar" FontSize="15" Margin="0,5,0,0" FontAttributes="Bold" 
                            HorizontalTextAlignment="Center" Text="Observação:"                   
                            TextColor="{StaticResource asphaltPrimary}"/>
 
-                    <Entry x:Name="Lbl_Troca" Placeholder="Ex.: Tirar a cebola, metade calabresa etc" 
+                            <Entry x:Name="Lbl_Troca" Placeholder="Ex.: Tirar a cebola, metade calabresa etc" 
                            Margin="0,5" HeightRequest="60" WidthRequest="200"
                            HorizontalTextAlignment="Center" FontSize="13" />
 
-                </StackLayout>
-            </StackLayout>
-         </ScrollView>
+                        </StackLayout>
+                    </StackLayout>
+                </ScrollView>
 
-        <Button x:Name="btn_selecionar" Margin="0,5" Text="Adicionar ao Pedido!" 
-                BackgroundColor="#EF5350" Visual="Material" TextColor="White" 
-                Clicked="Btn_selecionar_Clicked" ></Button>
+                <Button x:Name="btn_selecionar" Margin="0,5" Text="Adicionar ao Pedido!" 
+                        BackgroundColor="#EF5350" Visual="Material" TextColor="White" 
+                        Clicked="Btn_selecionar_Clicked" />
+            </StackLayout>
+        </Frame>
     </StackLayout>
 
 </pages:PopupPage>
